client/project-three-peapod/src/components/Product.css
/* All Page */

.entire-main-section {
  display: flex;
  flex-direction: row;
  margin-top: 10px;
}

/* X AXIS */
.x-axis-main-section {
  width: 75%;
}

.main-info-div {
  display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 20px 20px;
    width: 100%;
}

.main-info-thumbnail {
  height: 300px;
  width: 350px;
  border: 8px solid white;
  box-sizing: border-box;
  overflow: hidden;
  margin: 0 10px;
}

.main-info-thumbnail img {
  max-height: 290px;
  width: auto;
  height: auto;
}

.stack-icons-info {
  display: flex;
  flex-direction: column;
  width: 50%;
}

.icons-div {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

.shopping-icon {
  height: 35px;
}

.ratings-icon {
  height: 15px;
  margin-right: 5px;
}

.small_chat-icon {
  height: 60px;
}

.info-div-stars {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}

.info-div-stars p {
  margin: 0;
  margin: 0;
  color: #4D6E22;
  text-decoration: underline;
}

.price-button-div-item {
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  align-items: center;
  font-weight: 600;
  width: 35%;
  padding: 20px 20px 0 20px;
  margin-left: 55%;
}

.price-button-div-item img {
  max-width: 200px;
}

.price-button-div-item span {
  margin-right: 15%;
  font-size: 31px;
}

.price-button-div-item-text p {
  margin-right: 45px;
  font-size: 13px;
  margin: 5px 10px 0px 0px;
  color: darkgrey;
  font-style: italic;
}

.price-lower-item {
  margin-right: 15%;
  font-size: 18px;
}

.info-div-sub {
  margin: 0 50px;
  font-weight: bolder;
  height: 200px;
}

.edit-delete-div {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 20px;
  width: 40%;
}

.edit-link {
  text-decoration: none;
  background: #4d6e22;
  color: white;
  border-radius: 2px;
  padding: 8px;
  margin: 5px;
  text-align: center;
  font-size: 12px;
  width: 40%;
  font-weight: 600;
}

.delete-button {
  background-color: #4d6e22;
  border: 1px solid #ddd;
  border-radius: 3px;
  color: white;
  font-family: 'Roboto', sans-serif;
  font-weight: 600;
  font-size: 12px;
  margin: 5px;
  padding: 8px;
  width: 43.5%;
}

.nutrition-div {
  display: flex;
  justify-content: center;
  flex-direction: column;
  width: 100%;
  margin-top: 15px;
}

.nutrition-div img {
  max-width:500px;
  max-height:100px;
  width: auto;
  height: auto;
}

.nutrition-recipe-banner {
  display: flex;
  justify-content: center;
  padding: 8px;
  background: #F4F3F4;;
}

.nutrition-recipe-banner img {
  justify-content: center;
}

.nutrition-logo img {
  max-height: 55px;
}

.info-for-nutrition {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}

.info-for-nutrition h3 {
  font-size: 25px;
}

.nutrition-split-div {
  width: 70%;
}

.nutrition-title {
  border-bottom: 1px solid black;
  margin-left: 8%;
  width: 85%;
}

.nutrition-breakdown-div {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.single-nutrition-breakdown-div {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.single-nutrition-breakdown-div h3 {
  margin: 0;
}

.single-nutrition-breakdown-div h4 {
  margin: 0;
  font-weight: bold;
  color: slategray
}

.substitute-item-div {
  width: 30%;
}

.substitute-item-title {
  border-bottom: 1px solid black;
}

.substitute-image {
  display: flex;
  flex-direction: row;
}

.beefsteak-tomatoes-thumbnail {
  height: 100px;
}

.beefsteak-tomatoes-substitute-text h6 {
  margin: 10px 0 0 0;
  font-size: 15px;
}

.beefsteak-tomatoes-substitute-text p {
  color: darkgray;
  font-size: 15px;
}

.substitute-checkbox {
  display: flex;
  flex-direction: row;
}

.substitute-checkbox img {
  width: 45px;
}

.substitute-checkbox p {
  display: flex;
  align-items: center;
}

/* Y AXIS */

.y-axis-main-section {
  width: 25%;
  display: flex;
  flex-direction: column;
}

.suggestions-div {
  width: 75%;
  padding: 0px 20px;
}

.suggestins-div-title {
  border-bottom: 1px solid black;
}

.listed-suggestions {
  display: flex;
  flex-direction: column;
  padding: 20px 0px;
  border-bottom: 1px solid black;
}

.single-main-info-div {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 0 0 10px 0;
}

.single-suggested-info-div {
  width: 50%;
}

.single-suggested-info-div h6 {
  margin: 0;
}

.single-suggested-info-div p {
  margin: 0;
}

.single-suggested-button-price-div {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.single-suggested-button-price-div p {
  font-size: 22px;
  font-weight: 600;
  margin: 5px 5px;
}

.single-suggested-button-price-div img {
  width: 140px;
  padding: 3px;
  margin: 0;
  border-radius: 1px;
}

.singular-add-to-cart {
  width: 140px;
  padding: 3px;
  margin: 0;
  border-radius: 1px;
}

